# GeneticSimulation

./: CMakeLists.txt
src/: defines.cpp  defines.h  main.cpp  optimiser.cpp  optimiser.h  organism.cpp  organism.h
test/: test_defines.cpp  test_optimiser.cpp  test_organism.cpp
